--- a/app/locations/_components/_styles/locations-card.module.css
+++ b/app/locations/_components/_styles/locations-card.module.css
@@ -112,10 +112,11 @@
   border: none;
   width: 50%;
   height: 47px;
-  background: #e76317;
+  background: #333;
   border-radius: 3px;
   font-size: 16px;
   cursor: pointer;
+  color: #fff;
   
 }
 .button:hover {
@@ -124,7 +125,7 @@
 }
 .icon {
   font-size: 20px;
-  color: #e76317;
+  color: #f87808;
   flex-shrink: 0;
 }
 
