--- a/app/classes/_components/_styles/calendar.module.css
+++ b/app/classes/_components/_styles/calendar.module.css
@@ -132,11 +132,11 @@
   color: rgb(255, 255, 255);
   font-size: 20px;
   font-weight: 600;
-  background-color: #e67e22;
+  background-color: #faaa64;
   text-align: left;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  border-right: 5px solid #d35400;
+  border-right: 5px solid #f28740;
   transition: all 0.3s ease;
   cursor: pointer;
 }
@@ -158,7 +158,7 @@
     font-size: 0.85em;
   }
   
-  .full {
+  .event.full {
     background-color: #999;
     pointer-events: none;
     color: #000;
@@ -167,7 +167,7 @@
     opacity: 0.7;
   }
 
-  .expired {
+  .event.expired {
     background-color: #e0e0e0;
     pointer-events: none;
     color: #666;
