--- a/app/coaches/_components/_styles/coaches-card.module.css
+++ b/app/coaches/_components/_styles/coaches-card.module.css
@@ -6,42 +6,53 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   overflow: hidden;
-  transition: all 0.3s ease;
+  transition: all 0.4s ease;
   letter-spacing: 1.5;
   margin-bottom: 5px;
+  border: solid 1px #eee;
 }
 
 .coaches-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
 
 .card-left {
   width: 170px;
-  background-color: #db6318; /* 橘色背景 */
+  /* background-color: #fb6e28; */
   display: flex;
   justify-content: center;
-  padding-top: 20px;
+  
+  position: relative;
+  overflow: hidden;
 }
 
+
 .avatar-container {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
   overflow: hidden;
-  border: 4px solid white;
+  border: 3px solid white;
+  transition: transform 0.4s ease;
+}
+
+.avatar-container:hover {
+  transform: scale(1.05);
 }
 
 .avatar {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: transform 0.3s ease;
 }
+
 
 .card-right {
   flex: 1;
-  background-color: #0b3760; /* 深藍色背景 */
-  color: white;
+  background-color: white;
+  color: #333;
   padding: 25px 20px;
   position: relative;
 }
@@ -50,12 +61,17 @@
   font-size: 24px;
   font-weight: bold;
   margin: 0 0 10px 0;
+  color: #ff7733;
 }
 
 .divider {
-  height: 1px;
-  background-color: rgba(255, 255, 255, 0.5);
+  height: 2px;
+  background-color: rgba(249, 128, 72, 0.5);
   margin-bottom: 10px;
+  width: 32%;
+  transition: width 0.3s ease;
+}
+.coaches-card:hover .divider {
   width: 100%;
 }
 
@@ -68,8 +84,8 @@
   font-size: 14px;
   margin: 5px 0;
   opacity: 0.9;
-  
 }
+
 
 .description {
   font-size: 16px;
@@ -86,13 +102,22 @@
   display: flex;
   align-items: center;
   gap: 7px;
+ 
 }
 .contactItem {
   margin-top: 10px;
 }
 
+.contactItem span {
+  display: inline-block;
+  max-width: 220px; /* 設定最大寬度 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .arrow {
-  color: #1d3459;
+  color: #ffffff;
   font-weight: bold;
   font-size: 18px;
 }
@@ -104,7 +129,7 @@
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  background-color: white;
+  background-color: rgb(248, 127, 57);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,19 +146,30 @@
   transform: scale(1.05);
 }
 
-.avatar {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.3s ease;
+
+@media (max-width: 768px)  {
+ 
 }
+
+
 
 @media (max-width: 440px) {
   .avatar-container {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+    width: 55%;
+    height: 50%;
+    border-radius: 10px;
     overflow: hidden;
-    border: 3px solid white;
   }
+    .coaches-card {
+      width: 80%;
+      height: auto;
+      flex-direction: column;
+      margin:  auto;
+    }
+    
+    .card-left {
+      width: 100%;
+      padding: 20px 0;
+    }
+   
 }
