--- a/app/locations/_components/_styles/banner.module.css
+++ b/app/locations/_components/_styles/banner.module.css
@@ -15,8 +15,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/images/banner.jpg') center repeat;
-    background-size: contain;
+    background: url('/images/location/banner.jpg') center ;
+    background-size: cover;
     opacity: 0.9;
     z-index: -3;
   }
@@ -29,13 +29,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 灰色覆蓋層 */
+    background-color: rgba(0, 0, 0, 0.2);
     z-index: -2;
   }
   
   .title {
     color: white;
-    font-size: clamp(3rem, 3.5vw, 4.5rem);
+    font-size: clamp(2rem, 3.5vw, 3rem);
     font-weight: bold;
     margin-bottom: 20px;
     position: absolute;
@@ -45,10 +45,11 @@
   }
   .p {
     color: #dddddd;
-    font-size: clamp(1rem, 3.5vw, 2rem);
+    font-size: clamp(1rem, 2vw, 1.5rem);
     position: absolute;
     left: 50px;
-    bottom: 50px;    z-index: -1;
+    bottom: 50px;    
+    z-index: -1;
   }
   
  
