--- a/app/member-center/_styles/member.module.css
+++ b/app/member-center/_styles/member.module.css
@@ -84,8 +84,10 @@
   margin: auto;
 }
 .welcomeicon {
+  width: 50px;
+  height: 50px;
   margin-right: 10px;
-  animation: rotate 4s infinite linear;
+  animation: rotate 4.5s infinite linear;
 }
 @keyframes rotate {
   0% {
