--- a/app/friends/_styles/friends.module.css
+++ b/app/friends/_styles/friends.module.css
@@ -11,12 +11,12 @@
   align-items: flex-start;
   padding: 50px 60px;
 }
-.banner h3 {
+.title {
   color: white;
   font-size: clamp(2rem, 3.5vw, 3rem);
 }
-.banner p {
-  color: white;
+.subtitle {
+  color: #ddd;
   font-size: clamp(1rem, 2vw, 1.5rem);
 }
 .friendContainer {
@@ -99,7 +99,7 @@
 
 .selectPart li.active {
   color: #f87808;
-  font-weight: 400;
+  font-weight: 600;
   border-bottom: #f87808 1px solid;
 }
 /* #endregion ================= Select  End ====================== */
@@ -169,7 +169,7 @@
 .breadcrumbItem:not(:last-child)::after {
   content: '›';
   position: absolute;
-  top: 13px;
+  top: 15px;
   right: -5px;
   color: #666;
   font-size: 20px;
@@ -180,7 +180,6 @@
   text-decoration: none;
   color: #666;
   font-size: 18px;
-  font-family: 'Noto Serif TC', serif;
   cursor: pointer;
   position: relative;
   transition: transform 0.3s ease, color 0.3s ease;
@@ -206,8 +205,6 @@
 .breadcrumbItem.active a {
   color: #f87808;
   font-weight: 600;
-  text-decoration: underline;
-  text-underline-offset: 10px;
 }
 /* pagination */
 
@@ -222,7 +219,7 @@
 
 .pagination a {
   color: white;
-  background-color: #0b3760;
+  background-color: #333;
   padding: 10px 15px;
   margin: 0 5px;
   border-radius: 3px;
@@ -263,7 +260,7 @@
 
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 1vw;
 }
 
@@ -275,12 +272,10 @@
   --bg-color: #fff;
   --main-color: #555;
   width: 228px;
-  height: 250px;
+  height: 260px;
   background: var(--bg-color);
-  /* border: 2px solid var(--main-color); */
-  /* box-shadow: 4px 4px var(--main-color); */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.295), 0 6px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -288,12 +283,11 @@
 }
 
 .cardPhoto img {
-  transform: scale(0.3) translate(220px, 230px);
-  width: 250px;
-  height: 270px;
-  margin-left: -125px;
-  margin-top: -125px;
-  border-radius: 20%;
+  width: 100px;
+  height: 100px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 3px;
 }
 
 .cardTitle {
@@ -364,11 +358,6 @@
   opacity: 1;
   height: 40px;
   margin-bottom: 10px;
-}
-
-.cardPhoto img:hover {
-  transition: 0.3s;
-  transform: scale(0.4) translate(160px, 150px);
 }
 
 /* #endregion =================  Card end ====================== */
