--- a/app/member-center/rated-reviews/_compenents/_styles/review.module.css
+++ b/app/member-center/rated-reviews/_compenents/_styles/review.module.css
@@ -1,27 +1,31 @@
 .review{
-    margin-top: 100px;
-    /* height: 80vh; */
-    margin-left: 350px;
+    width: 100%;
     
 }
 .productReview{
     display: flex;
     flex-direction: row;
-    background-color: rgb(246, 247, 248);
-width: 100%;
-margin-top: 20px;}
-    
-
+    background-color: #f87808;
+    width: 100%;
+    margin-top: 20px;
+    margin-left: 20px;
+    border-radius: 5px;
+    border-radius: 5px;
+    background: #ffffff;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+    /* margin: auto; */
+}
 
 
 .img{
     width: 100%;
-    border-radius: 5px;
+    height: 100%;
+    border-radius: 5px 0 0 5px;
 }
 
 .imgContainer{
-    width: 300px;
-    object-fit: cover;
+    width: 45%;
+    object-fit: fill;
     
 
 }
@@ -31,52 +35,87 @@ margin-top: 20px;}
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-size: 18px;
+    font-size: 16px;
     align-items: center;
+    width: 100%;
 }
 
 .contentItem{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin-left: 30px;
-    line-height: 35px;
-    font-weight: 600;
-    /* background-color: rgb(249, 252, 253); */
+    justify-content: space-around;
+    border-radius: 10px;
+    height: 130px;
+    color: #686a6c;
+}
+.contentItems{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 20px;
+    margin-right: 5px;
     padding: 10px;
     border-radius: 10px;
-    /* border: white 2px solid; */
+    width: 50%;
 }
 
+.productContent{
+    display: flex;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    align-items: center;
+}
+
+.productComment{
+    display: flex;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    align-items: center;
+    /* justify-content: space-between; */
+}
+
+.stars{
+    display: flex;
+    align-items: center;
+}
+
+
 .comment{
-    height: 100px;
-    width: 200%;
+    height: 120px;
+    width: 90%;
     border: 1px solid white;
-    background-color: white;
+    background-color: #333;
     padding: 5px;
-    font-size: 14px;
+    font-size: 12px;
+    color: #ffffff;
+    border-radius: 10px;
 }
 
 .latest_review{
-    /* background-color: rgb(239, 148, 20); */
-    /* height: 100px; */
-    margin-left: 50px;
     display: flex;
+    align-items: stretch;
     flex-direction: column;
     justify-content: start;
     border-left: 2px gray solid;
-    padding-left: 30px;
+    padding-left: 20px;
+    width: 70%;
+    margin: auto;
+    padding: 2px 0px 2px 20px;
+    height: 170px;
 }
 
 .button{
-    color: rgb(83, 77, 75);
+    color: rgb(243, 239, 237);
     border: none;
-    /* background-color: rgb(243, 90, 35); */
+    background-color: #f87808;
     height: 30px;
     margin-top: 10px;
-    width: 100px;
-    font-size: 24px;
+    width: 90%;
+    font-size: 14px;
     font-weight: 700;
+    border-radius: 10px;
 }
 
 /* review.module.css */
