--- a/app/products/components/_styles/EquipmentRental.module.css
+++ b/app/products/components/_styles/EquipmentRental.module.css
@@ -3,12 +3,7 @@
 
 
 .equipmentRental {
-    font-family:
-      "Noto Serif TC",
-      -apple-system,
-      Roboto,
-      Helvetica,
-      sans-serif;
+  position: relative;
   }
   
   .contentSection {
@@ -16,7 +11,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-    padding: 30px 0;
     display: flex;
     position: relative;
     overflow: hidden;
@@ -25,7 +19,8 @@
 
   .contentTitle{
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
+
   }
 
   .selectBtn {
