--- a/app/products/components/_styles/HeroSection.module.css
+++ b/app/products/components/_styles/HeroSection.module.css
@@ -4,7 +4,6 @@
   height: 500px;
   padding: 70px;
   font-size: 40px;
-  font-weight: 700;
   position: relative;
   overflow: hidden;
 }
@@ -37,11 +36,14 @@
   justify-content: left;
   align-items: center;
   z-index: 2;
-  font-size: 54px;
+  font-size: clamp(2rem,3.5vw,3rem);
+  margin-bottom: 20px;
+  font-weight: 700;
 }
 
 .heroContent{
-  font-size: 24px;
+  font-size: clamp(1rem, 2vw, 1.5rem);
+  color: #dddddd;
 }
 
 .headerContain{
