--- a/app/products/components/_styles/search.module.css
+++ b/app/products/components/_styles/search.module.css
@@ -8,10 +8,8 @@
   }
   
   .select {
-    /* padding: 3px; */
-    width: 80%;
+    width: 250px;
     border-radius: 3px;
-    font-family: "Noto Serif TC", serif;
     font-size: 18px;
     border: 2px rgb(221, 215, 215) solid;
   }
@@ -25,13 +23,12 @@
     cursor: pointer;
     border-radius: 3px;
     font-size: 15px;
-    font-family: "Noto Serif TC", serif;
   }
   
   /* 可以添加懸停效果 */
-  .button:hover {
+  /* .button:hover {
     background-color: #e56c00;
-  }
+  } */
 
   @media (width <= 960px) {
     .searchContainer {
