--- a/app/products/components/_styles/sort.module.css
+++ b/app/products/components/_styles/sort.module.css
@@ -26,7 +26,7 @@
 
 .btnHome {
   padding: 0 20px;
-  width: 60%;
+  width: 85%;
   height: 60px;
   text-align: center;
   line-height: 60px;
@@ -46,19 +46,24 @@
 .active {
   color: #f87808;
   font-weight: 600;
+  border-bottom: #f87808 1px solid;
 }
 
-.active::after,
+/* .active::after,
 .btnHome:hover::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 1px;
-  background: #48767b;
+  height: 0.5px;
+  background: #f87808;
   transition: all 0.5s ease;
   
+} */
+
+.btnHome:hover{
+  border-bottom: #f87808 1px solid;
 }
 
 .selectBtn {
