--- a/app/videos/components/_styles/video-Card.module.css
+++ b/app/videos/components/_styles/video-Card.module.css
@@ -75,6 +75,7 @@
     flex-direction: row;
     /* justify-content: space-between; */
     align-items: center;
+    position: relative;
   }
   
   .content {
