--- a/app/member-center/_styles/member-layout.module.css
+++ b/app/member-center/_styles/member-layout.module.css
@@ -3,8 +3,7 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  padding: 20px;
-  margin-top: 70px;
+  padding: 70px 20px;
   min-height: 100vh;
 }
 .centerSidebar {
