--- a/app/_components/_styles/footer.module.css
+++ b/app/_components/_styles/footer.module.css
@@ -2,17 +2,22 @@
 .container {
   width: 100%;
   height: 100%;
+  background-color: #2a2929;
+}
+.top {
+  width: 100%;
+  height: 100%;
   padding: 40px 64px 50px;
-  /* background: linear-gradient(90deg, rgba(0, 0, 0, 0.73) 26%, rgba(0, 0, 0, 0) 100%); */
   background-color: #2a2929;
   display: inline-flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   gap: 10px;
+
 }
 
-.content {
+.part {
+  width: 33%;
   align-self: stretch;
   height: 200px;
   display: flex;
@@ -23,9 +28,10 @@
 }
 
 .title {
+  text-align: center;
   align-self: stretch;
   color: #f5fff6;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 .contactWrapper {
@@ -46,12 +52,20 @@
   align-items: flex-start;
   gap: 22px;
 }
-
+.group{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap:20px
+}
 .contactItem {
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
   gap: 12px;
+  padding: 20px;
+  border-radius: 50%;
+  border: 1px solid #ffffffb2;
 }
 
 .contactText {
@@ -66,4 +80,11 @@
   justify-content: flex-start;
   align-items: center;
   gap: 12px;
+}
+
+.bottom{
+  font-size: 12px;
+  text-align: center;
+  color: #ffffff83;
+  padding-bottom: 20px;
 }
