--- a/app/member-center/unrated-reviews/_compenents/_styles/review.module.css
+++ b/app/member-center/unrated-reviews/_compenents/_styles/review.module.css
@@ -8,12 +8,11 @@
     background-color: #f87808;
     width: 100%;
     margin-top: 20px;
-    margin-left: 20px;
     border-radius: 5px;
     border-radius: 5px;
     background: #ffffff;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
-    /* margin: auto; */
+    
 }
 
 
@@ -34,7 +33,7 @@
     height: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    margin-left: 30px;
     font-size: 16px;
     align-items: center;
     width: 100%;
@@ -43,20 +42,23 @@
 .contentItem{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     border-radius: 10px;
-    height: 130px;
+    height: 100px;
     color: #686a6c;
 }
 .contentItems{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-left: 20px;
     margin-right: 5px;
     padding: 10px;
     border-radius: 10px;
-    width: 50%;
+    width: 80%;
+}
+
+.contentAll{
+    display: flex;
 }
 
 .productContent{
@@ -73,7 +75,6 @@
     font-weight: 600;
     margin-bottom: 10px;
     align-items: center;
-    /* justify-content: space-between; */
 }
 
 .stars{
@@ -100,7 +101,7 @@
     justify-content: start;
     border-left: 2px gray solid;
     padding-left: 20px;
-    width: 70%;
+    width: 30%;
     margin: auto;
     padding: 2px 0px 2px 20px;
     height: 170px;
@@ -110,10 +111,11 @@
     color: rgb(243, 239, 237);
     border: none;
     background-color: #f87808;
-    height: 30px;
-    margin-top: 10px;
-    width: 90%;
-    font-size: 14px;
+    height: 35px;
+    margin-top: 13%;
+    margin-left: 170px;
+    width: 20%;
+    font-size: 13px;
     font-weight: 700;
     border-radius: 10px;
 }
@@ -165,4 +167,21 @@
     align-items: center;
     margin-bottom: 15px;
   }
-  
+
+  .swal2-textarea {
+    background-color: #fff3e6;
+    border: 1px solid #f87808;
+    border-radius: 4px;
+    padding: 8px;
+    color: #333;
+  }
+  .header{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    border-radius: 7px;
+    color: #fff3e6;
+  }
