--- a/app/member-center/myfriends/_styles/friendList.module.css
+++ b/app/member-center/myfriends/_styles/friendList.module.css
@@ -1,7 +1,6 @@
 .friendsPage {
   height: 100%;
-  width: 80%;
-  margin: 0 20px;
+  width: 100%;
   padding: 20px;
   border-radius: 3px;
   background-color: #c0c2c54f;
@@ -46,7 +45,11 @@
   list-style-type: none;
   padding: 0;
 }
-
+.leftsection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .friendsPage ul li {
   background-color: #ffffffbd;
   height: 50px;
@@ -56,6 +59,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.avatar {
+  margin-right: 15px;
+}
+.avatar img {
+  border-radius: 50%;
 }
 
 .friendsPage button {
@@ -96,17 +105,4 @@
 
 .trash:active {
   background-color: #db6318;
-}
-
-@media (max-width: 1590px) {
-  .friendsPage {
-    margin: auto;
-    background-color: #333333ec;
-  }
-  .title {
-    color: #fff;
-  }
-  .subtitle {
-    color: #fff;
-  }
 }
