--- a/app/member-center/myfriends/chat-list/[chatroomId]/chatroom.module.css
+++ b/app/member-center/myfriends/chat-list/[chatroomId]/chatroom.module.css
@@ -1,11 +1,10 @@
 .tempbody {
   display: flex;
   justify-content: center;
-  padding: 0 20px;
+  /* padding: 0 20px; */
   height: 100%;
   max-height: 80vh;
   box-sizing: border-box;
-  border-radius: 3px;
   min-width: 380px;
 }
 .chatContainer {
@@ -19,18 +18,21 @@
   display: flex;
   align-items: center;
   padding: 15px 20px;
-  background-color: #333;
+  background-color: #f9f9f9;
   border-bottom: 2px solid #ddd;
-  color: white;
-  height: 7%;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  /* color: white; */
+  height: 8%;
 }
-
+.avatar {
+  margin-right: 10px;
+}
+.avatar img {
+  border-radius: 50%;
+}
 .chatBox {
   display: flex;
   flex-direction: column;
-  height: 86%;
+  height: 84%;
   overflow-y: auto;
 }
 
@@ -48,7 +50,7 @@
   padding: 0.25rem;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
-  height: 7%;
+  height: 8%;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
 }
